Fix mouse flickering between states when moving over input pane contents

--- a/src/extensions/core/editor/editor.css
+++ b/src/extensions/core/editor/editor.css
@@ -685,6 +685,10 @@ body {
   background: none;
 }
 
+.input-area .ace_scroller {
+  cursor: text;
+}
+
 .filetype-mkd .ace_line_group * {
   color: #000;
 }
